--- a/my website/index.html
+++ b/my website/index.html
@@ -26,7 +26,7 @@
                 <h2>Projects</h2>
                 <p>Here are some of the projects I've worked on:</p>
                 <ul>
-                    <li><a href="#" class="project-link">Project 1: Portfolio Website</a> - A personal portfolio to showcase my work.</li>
+                    <li><a href="#" class="https://el-ashraf.github.io/cv/">Project 1: Portfolio Website</a> - A personal portfolio to showcase my work.</li>
                     <li><a href="#" class="project-link">Project 2: E-commerce Platform</a> - An online store built with React and Node.js.</li>
                     <li><a href="#" class="project-link">Project 3: Blog System</a> - A blog system with user authentication and post management.</li>
                 </ul>
@@ -52,7 +52,7 @@
                 <h2>Contact</h2>
                 <p>You can reach me at:</p>
                 <ul>
-                    <li>Email: <a href="mailto:ahmad@example.com">ahmad@example.com</a></li>
+                    <li>Email: <a href="mailto:ahmadtech20@gmail.com">ahmadtech20@gmail.com</a></li>
                     <li>LinkedIn: <a href="https://www.linkedin.com/in/ahmadmohammad" target="_blank">LinkedIn Profile</a></li>
                     <li>GitHub: <a href="https://github.com/ahmadmohammad" target="_blank">GitHub Profile</a></li>
                 </ul>
